syntax = "proto3";
option go_package = ".;proto";

import "global.proto";
import "message/bank.proto";

message RegisterMemberRequest {
    string user = 1;
    string pwd = 2;
    sint32 flag = 3;
    string name = 4;
    string phone = 5;
    string email = 6;
    string avatar = 7;
    map<string, string> extend = 8;
}

message LoginRequest {
    string user = 1;
    string pwd = 2;
    bool update = 3;
}

message CheckTradePwdRequest {
    sint64 memberId = 1;
    string tradePwd = 2;
}

message SwapMemberRequest {
    ECredentials cred = 1;
    string value = 2;
}

message SMemberLevelListResponse {
    repeated SMemberLevel Value = 1;
}

message SubmitTrustInfoRequest {
    sint64 memberId = 1;
    STrustedInfo info = 2;
}

message ReviewTrustInfoRequest {
    sint64 memberId = 1;
    bool reviewPass = 2;
    string remark = 3;
}

message LockRequest {
    sint64 memberId = 1;
    sint32 minutes = 2;
    string remark = 3;
}
message GrantFlagRequest {
    sint64 memberId = 1;
    sint32 flag = 2;
}

message SendCodeRequest {
    sint64 memberId = 1;
    string operation = 2;
    string msgType = 3;
}

message CompareCodeRequest {
    sint64 memberId = 1;
    string code = 2;
}

message SReceiptsCodeListResponse {
    repeated SReceiptsCode Value = 1;
}
message ReceiptsCodeSaveRequest {
    sint64 memberId = 1;
    SReceiptsCode code = 2;
}


message UpdateLevelRequest {
    sint64 memberId = 1;
    sint32 level = 2;
    bool review = 3;
    sint64 paymentOrderId = 4;
}

message ChangePhoneRequest {
    sint64 memberId = 1;
    string phone = 2;
}
message ChangeUserRequest {
    sint64 MemberId = 1;
    string User = 2;
}
message ModifyPwdRequest {
    sint64 memberId = 1;
    string old = 2;
    string pwd = 3;
}
message ChangeInviterRequest {
    sint64 memberId = 1;
    sint64 inviterId = 2;
}

message OrderQuantityMapResponse {
    map<sint32, sint32> Data = 1;
}

message GetTokenRequest {
    sint64 memberId = 1;
    bool reset = 2;
}

message PremiumRequest {
    sint64 memberId = 1;
    sint32 v = 2;
    sint64 expires = 3;
}

message CheckTokenRequest {
    sint64 memberId = 1;
    string token = 2;
}

message AddressListResponse {
    repeated SAddress Value = 1;
}
message SaveAddressRequest {
    sint64 MemberId = 1;
    SAddress Value = 2;
}

message GetAddressRequest {
    sint64 memberId = 1;
    sint64 addrId = 2;
}
//会员服务
service MemberService {
    /**
     * 注册会员
     * @param user 登陆用户名
     * @param pwd 登陆密码,md5运算后的字符串
     * @param flag 用户自定义标志
     * @param phone 手机号码
     * @param email 邮箱
     * @param avatar 头像
     * @param extend 扩展数据
     * @return 注册结果，返回user_code
     */
    rpc RegisterMemberV2 (RegisterMemberRequest) returns (Result) {
    }
    // 登录，返回结果(Result)和会员编号(Id);
    // Result值为：-1:会员不存在; -2:账号密码不正确; -3:账号被停用
    rpc CheckLogin (LoginRequest) returns (Result) {
    }
    /** 检查交易密码 */
    rpc CheckTradePwd (CheckTradePwdRequest) returns (Result) {
    }
    /** 交换会员编号 */
    rpc SwapMemberId (SwapMemberRequest) returns (Int64) {
    }
    /** 等级列表 */
    rpc GetLevels (Empty) returns (SMemberLevelListResponse) {
    }
    /* 获取实名信息,memberId */
    rpc GetTrustInfo (Int64) returns (STrustedInfo) {
    }
    /** 提交实名信息 */
    rpc SubmitTrustInfo (SubmitTrustInfoRequest) returns (Result) {
    }
    /** 审核实名认证,若重复审核将返回错误 **/
    rpc ReviewTrustedInfo (ReviewTrustInfoRequest) returns (Result) {
    }
    /** 获取会员等级信息,id */
    rpc GetMemberLevel (Int32) returns (SMemberLevel) {
    }
    /** 保存等级 */
    rpc SaveMemberLevel (SMemberLevel) returns (Result) {
    }
    // 根据SIGN获取等级,sign
    rpc GetLevelBySign (String) returns (SMemberLevel) {
    }
    // 删除会员等级
    rpc DeleteMemberLevel (Int64) returns (Result) {
    }
    // 根据会员编号获取会员信息
    rpc GetMember (Int64) returns (SMember) {
    }
    // 根据用户名获取会员信息
    rpc GetMemberByUser (String) returns (SMember) {
    }
    // 根据会员编号获取会员资料
    rpc GetProfile (Int64) returns (SProfile) {
    }
    // 保存资料
    rpc SaveProfile (SProfile) returns (Result) {
    }
    // 获取会员邀请关系
    rpc GetRelation (Int64) returns (MemberRelationResponse) {
    }
    // 获取会员绑定银行卡信息
    rpc GetBankCards (Int64) returns (BankListResponse) {
    }
    // 保存银行卡
    rpc SaveBankCard (BankCardSaveRequest) returns (Result) {
    }
    // 移除绑定的银行卡
    rpc RemoveBankCard(BankCardUserIdRequest)returns(Result){}
    /** 激活会员,memberId */
    rpc Active (Int64) returns (Result) {
    }
    /** 锁定,minutes锁定分钟数,默认:-1永久锁定 */
    rpc Lock (LockRequest) returns (Result) {
    }
    /** 解锁会员 */
    rpc Unlock (Int64) returns (Result) {
    }
    /** 标志赋值, 如果flag小于零, 则异或运算 */
    rpc GrantFlag (GrantFlagRequest) returns (Result) {
    }
    /** 获取会员汇总信息,memberId */
    rpc Complex (Int64) returns (SComplexMember) {
    }
    /** 发送会员验证码消息, 并返回验证码, 验证码通过data.code获取 */
    rpc SendCode (SendCodeRequest) returns (Result) {
    }
    /** 比较验证码是否正确 */
    rpc CompareCode (CompareCodeRequest) returns (Result) {
    }
    /** 获取收款码 */
    rpc ReceiptsCodes (Int64) returns (SReceiptsCodeListResponse) {
    }
    /** 保存收款码 */
    rpc SaveReceiptsCode (ReceiptsCodeSaveRequest) returns (Result) {
    }

    // 检查资料是否完成
    rpc CheckProfileComplete (Int64) returns (Result) {
    }
    /** 获取会员等级信息 */
    rpc MemberLevelInfo (Int64) returns (SMemberLevelInfo) {
    }
    // 更改会员等级
    rpc UpdateLevel (UpdateLevelRequest) returns (Result) {
    }
    /* 更改手机号码，不验证手机格式 */
    rpc ChangePhone (ChangePhoneRequest) returns (Result) {
    }
    /* 更改用户名 */
    rpc ChangeUser (ChangeUserRequest) returns (Result) {
    }
    // 上传会员头像
    rpc ChangeAvatar (AvatarRequest) returns (Result) {
    }
    /** 更改密码 */
    rpc ModifyPwd (ModifyPwdRequest) returns (Result) {
    }
    /** 更改交易密码 */
    rpc ModifyTradePwd (ModifyPwdRequest) returns (Result) {
    }
    // 检查资料是否完善
    rpc CheckProfileCompleted (Int64) returns (Bool) {
    }
    /** 更改邀请人 */
    rpc ChangeInviterId (ChangeInviterRequest) returns (Result) {
    }
    /** 获取会员的订单状态及其数量 */
    rpc OrdersQuantity (Int64) returns (OrderQuantityMapResponse) {
    }

    // 升级为高级会员
    rpc Premium (PremiumRequest) returns (Result) {
    }
    // 获取会员的会员Token,reset表示是否重置token
    rpc GetToken (GetTokenRequest) returns (String) {
    }
    // 检查会员的会话Token是否正确，如正确返回: 1
    rpc CheckToken (CheckTokenRequest) returns (Bool) {
    }
    // 移除会员的Token,memberId
    rpc RemoveToken (Int64) returns (Empty) {
    }
    // 获取会员的收货地址,memberId
    rpc GetAddressList (Int64) returns (AddressListResponse) {
    }
    // 保存会员的收货地址
    rpc SaveAddress (SaveAddressRequest) returns (Result) {
    }
    // 获取地址，如果addrId为0，则返回默认地址
    rpc GetAddress (GetAddressRequest) returns (SAddress) {
    }
    //删除配送地址
    rpc DeleteAddress (AddressIdRequest) returns (Result) {
    }
    // 获取会员账户信息,memberId
    rpc GetAccount (Int64) returns (SAccount) {
    }
    // 获取自己的邀请人会员编号数组
    rpc InviterArray (DepthRequest) returns (InviterIdListResponse) {
    }
    // 获取邀请会员的数量
    rpc InviteMembersQuantity (DepthRequest) returns (Int32) {
    }
    // 按条件获取荐指定等级会员的数量
    rpc QueryInviteQuantity (InviteQuantityRequest) returns (Int64) {
    }
    // 按条件获取荐指定等级会员的列表
    rpc QueryInviteArray (InviteQuantityRequest) returns (MemberIdListResponse) {
    }
    // 账户充值,amount精确到分
    rpc AccountCharge (AccountChangeRequest) returns (Result) {
    }
    // 账户消耗,amount精确到分
    rpc AccountConsume (AccountChangeRequest) returns (Result) {
    }
    // 账户抵扣,amount精确到分
    rpc AccountDiscount (AccountChangeRequest) returns (Result) {
    }
    // 账户退款,amount精确到分
    rpc AccountRefund (AccountChangeRequest) returns (Result) {
    }
    // 账户人工调整
    rpc AccountAdjust (AccountAdjustRequest) returns (Result) {
    }
    // !银行四要素认证
    rpc B4EAuth (B4EAuthRequest) returns (Result) {
    }
    /** 获取指定账户的流水记录 */
    rpc PagingAccountLog (PagingAccountInfoRequest) returns (SPagingResult) {
    }
    // 取消收藏
    rpc RemoveFavorite (FavoriteRequest) returns (Result) {
    }
    // 收藏商品
    rpc Favorite (FavoriteRequest) returns (Result) {
    }
    // 是否已收藏
    rpc IsFavored (FavoriteRequest) returns (Bool) {
    }
}

enum FavoriteType {
    Unused = 0;
    Shop = 1;
    Goods = 2;
}

message FavoriteRequest {
    sint64 MemberId = 1;
    FavoriteType FavoriteType = 2;
    sint64 ReferId = 3;
}
message DepthRequest {
    sint64 memberId = 1;
    sint32 depth = 2;
}
message InviterIdListResponse {
    repeated sint64 Value = 1;

}
message InviteQuantityRequest {
    sint64 memberId = 1;
    map<string, string> data = 2;
}
message MemberIdListResponse {
    repeated sint64 Value = 1;
}

message AccountChangeRequest {
    sint64 memberId = 1;
    sint32 account = 2;
    string title = 3;
    sint32 amount = 4;
    string outerNo = 5;
    string remark = 6;
}
message AccountAdjustRequest {
    sint64 memberId = 1;
    sint32 account = 2;
    sint32 value = 3;
    sint64 relateUser = 4;
    string remark = 5;
}

message B4EAuthRequest {
    sint64 memberId = 1;
    string action = 2;
    map<string, string> data = 3;
}

message PagingAccountInfoRequest {
    sint64 memberId = 1;
    sint32 accountType = 2;
    SPagingParams params = 3;
}

/** 等级 */
message SMemberLevel {
    sint32 ID = 1;
    string Name = 2;
    sint32 RequireExp = 3;
    string ProgramSignal = 4;
    sint32 IsOfficial = 5;
    sint32 Enabled = 6;
    sint32 AllowUpgrade = 7;
}

message AvatarRequest {
    sint64 MemberId = 1;
    string AvatarUrl = 2;
}

/** 会员 */
message SMember {
    /**  */
    sint64 Id = 1;
    /** 用户名 */
    string User = 2;
    /**  */
    string Pwd = 3;
    /**  */
    string TradePwd = 4;
    /**  */
    sint64 Exp = 5;
    /**  */
    sint32 Level = 6;
    /** 高级用户级别 */
    sint32 PremiumUser = 7;
    /** 高级用户过期时间 */
    sint64 PremiumExpires = 8;
    /**  */
    string InviteCode = 9;
    /**  */
    string RegIp = 10;
    /**  */
    string RegFrom = 11;
    /**  */
    sint32 State = 12;
    /** 会员标志 */
    sint32 Flag = 13;
    /**  */
    string Code = 14;
    /**  */
    string Avatar = 15;
    /**  */
    string Phone = 16;
    /**  */
    string Email = 17;
    /** 昵称 */
    string Name = 18;
    /** 真实姓名 */
    string RealName = 19;
    /* 用户会员密钥 */
    string DynamicToken = 20;
    /** 注册时间 */
    sint64 RegTime = 21;
    /** 最后登录时间 */
    sint64 LastLoginTime = 22;
}

/** 资料 */
message SProfile {
    sint64 MemberId = 1;
    string Name = 2;
    string Avatar = 3;
    sint32 Sex = 4;
    string BirthDay = 5;
    string Phone = 6;
    string Address = 7;
    string Im = 8;
    string Email = 9;
    sint32 Province = 10;
    sint32 City = 11;
    sint32 District = 12;
    string Remark = 13;
    string Ext1 = 14;
    string Ext2 = 15;
    string Ext3 = 16;
    string Ext4 = 17;
    string Ext5 = 18;
    string Ext6 = 19;
    sint64 UpdateTime = 20;
}

/** 账户 */
message SAccount {
    sint64 MemberId = 1;
    sint64 Integral = 2;
    sint64 FreezeIntegral = 3;
    double Balance = 4;
    double FreezeBalance = 5;
    double ExpiredBalance = 6;
    double WalletBalance = 7;
    double FreezeWallet = 8;
    double ExpiredWallet = 9;
    double TotalWalletAmount = 10;
    double FlowBalance = 11;
    double GrowBalance = 12;
    double GrowAmount = 13;
    double GrowEarnings = 14;
    double GrowTotalEarnings = 15;
    double TotalExpense = 16;
    double TotalCharge = 17;
    double TotalPay = 18;
    sint64 PriorityPay = 19;
    sint64 UpdateTime = 20;
}

message SComplexMember {
    string Name = 1;
    string Avatar = 2;
    string Phone = 3;
    sint32 Exp = 4;
    sint32 Level = 5;
    string LevelName = 6;
    string InviteCode = 7;
    sint32 TrustAuthState = 8;
    sint32 PremiumUser = 9;
    sint32 Flag = 10;
    sint64 UpdateTime = 11;
    /** 交易密码是否已设置 */
    bool TradePwdHasSet = 12;
}

message SMemberRelation {
    sint64 MemberId = 1;
    string CardId = 2;
    sint64 InviterId = 3;
    string InviterStr = 4;
    sint32 RegisterMchId = 5;
}

/** 实名认证信息 */
message STrustedInfo {
    /** 真实姓名 */
    string RealName = 1;
    /** 国家代码,如:CN */
    string CountryCode = 2;
    /** 证件类型 */
    sint32 CardType = 3;
    /** 证件号码 */
    string CardId = 4;
    /** 证件正面照 */
    string CardImage = 5;
    /** 证件反面照 */
    string CardReverseImage = 6;
    /** 认证人脸照 */
    string TrustImage = 7;
    /** 是否人工审核 */
    sint32 ManualReview = 8;
    /** 审核状态 */
    sint32 ReviewState = 9;
    /** 审核时间 */
    sint64 ReviewTime = 10;
    /** 备注 */
    string Remark = 11;
}

message SAddress {
    sint64 ID = 1;
    /** 收货人姓名 */
    string ConsigneeName = 2;
    /** 收货人电话 */
    string ConsigneePhone = 3;
    sint32 Province = 4;
    sint32 City = 5;
    sint32 District = 6;
    string Area = 7;
    string DetailAddress = 8;
    sint32 IsDefault = 9;
}

message AddressIdRequest {
    sint64 MemberId = 1;
    sint64 AddressId = 2;
}

/** 收款码 */
message SReceiptsCode {
    /** 账户标识,如:alipay */
    string Identity = 1;
    /** 账户名称 */
    string Name = 2;
    /** 账号 */
    string AccountId = 3;
    /** 收款码地址 */
    string CodeUrl = 4;
    /** 是否启用 */
    sint32 State = 5;
}

/* 会员等级信息 */
message SMemberLevelInfo {
    /** 等级 */
    sint32 Level = 1;
    /** 等级名称 */
    string LevelName = 2;
    /** 经验值 */
    sint32 Exp = 3;
    /** 编程符号 */
    string ProgramSignal = 4;
    /** 下一级等级,返回-1表示最高级别 */
    sint32 NextLevel = 5;
    /** 下一等级名称 */
    string NextLevelName = 6;
    /** 编程符号 */
    string NextProgramSignal = 7;
    /** 需要经验值 */
    sint32 RequireExp = 8;
}

/** 订单汇总信息 */
message SMemberOrderSummary {
    /** 待付款订单数量 */
    sint32 AwaitPayment = 1;
    /** 待发货订单数量 */
    sint32 AwaitShipment = 2;
    /** 待收货订单数量 */
    sint32 AwaitReceive = 3;
    /** 已完成订单数量 */
    sint32 Completed = 4;
}

message MemberRelationResponse {
    // 邀请人（会员）
    sint64 InviterId = 1;
    // 邀请会员编号(depth2)
    sint64 InviterD2 = 2;
    // 邀请会员编号(depth3)
    sint64 InviterD3 = 3;
}

/** 凭据 */
enum ECredentials {
    _1 = 0;
    /** 用户名 */
    User = 1;
    /** 用户代码 */
    Code = 2;
    /** 邮箱 */
    Email = 3;
    /** 手机号码 */
    Phone = 4;
    /** 邀请码 */
    InviteCode = 6;
}
